# BlurhashQt

./: .gitignore  CMakeLists.txt  README.md  blurhash.cpp  blurhash.h  blurhash_plugin.cpp  blurhash_plugin.h  qmldir  qt-blurhash.pro
example/: Test.qml
src/: blurhash.cpp  blurhash_plugin.cpp
